--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -17,12 +17,10 @@ body {
 /*This section refers to the header which has multiple fonts, colours and also contains the pages navigation links*/
 
 .header {
-  width: 100vw;
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: #ffffff;
-  color: #030e4e;
   background-image: url("../images/oleg-laptev-7jQh3EiS8Bs-unsplash.jpg");
 }
 
@@ -54,33 +52,85 @@ body {
   flex-wrap: wrap;
 }
 
+.nav {
+  color: #9b968e;
+  text-decoration: none;
+}
+
 a {
   color: #9b968e;
   text-decoration: none;
 }
 
 .content {
+  height: 100vh;
+  margin-top: 5rem;
+  flex-wrap: wrap;
+  flex-grow: 1;
 }
 
 .aboutme {
+  margin-bottom: 1rem;
+  height: 20rem;
+  padding: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #c7912c;
+  display: flex;
 }
 
 .aside {
+  height: 100vh;
+  padding: 20px;
+  clear: both;
+  float: left;
+  width: 20%;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+}
+
+.aside h3 {
+  font-size: medium;
+  margin-bottom: 10px;
+  text-align: left;
+  color: crimson;
 }
 
 .myimage {
+  height: 15rem;
+  width: 15rem;
+  border-radius: 50%;
 }
 
 .hiya {
+  font-size: 9rem;
+  font-family: monospace;
+  padding: 1rem;
 }
 
 .beekay {
+  font-size: 3rem;
+  margin-right: 6rem;
+  margin-left: 6rem;
+  font-family: monospace;
+  margin-bottom: 3rem;
 }
 
 .paboutme {
+  font-size: 2rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  font-family: monospace;
+  padding: 2rem;
 }
 
 .contactme {
+  font-size: 2rem;
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+  margin-left: 15rem;
+  padding: 1rem;
+  font-family: monospace;
+  color: #c7912c;
 }
 
 /* Tablet viewport, the max-width 768px */
