--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -80,19 +80,12 @@ a {
 
 .aside {
   height: 100vh;
-  padding: 20px;
-  clear: both;
+  padding: 15px;
   float: left;
   width: 20%;
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
-}
-
-.aside h3 {
-  font-size: medium;
-  margin-bottom: 10px;
-  text-align: left;
-  color: crimson;
+  color: rgb(10, 40, 83);
 }
 
 .myimage {
@@ -133,10 +126,42 @@ a {
   color: #c7912c;
 }
 
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.projects-title {
+  padding: 1rem;
+  text-align: center;
+  font-size: 6rem;
+  color: rgb(30, 94, 15);
+  font-family: monospace;
+}
+.card {
+  width: 25%;
+  margin-top: 20px;
+}
+.card-image-container {
+  padding: 20px;
+}
+.card-image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.card-info-container {
+  padding: 20px;
+  text-align: justify;
+}
+
 /* Tablet viewport, the max-width 768px */
 
 @media screen and (max-width: 768px) {
   .navcontainer {
+    flex-direction: column;
+  }
+  .projects-container {
     flex-direction: column;
   }
 }
@@ -145,6 +170,9 @@ a {
 
 @media screen and (max-width: 568px) {
   .navcontainer {
+    flex-direction: column;
+  }
+  .projects-container {
     flex-direction: column;
   }
 }
