--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
   background-color: white;
   position: relative;
-  display: block;
+  display: inline;
 }
 
 /*This section refers to the header which has multiple fonts, colours and also contains the pages navigation links*/
@@ -65,7 +65,7 @@ a {
 /* Main Section re about me and contact me*/
 .content {
   height: 100vh;
-  margin-top: 5rem;
+  padding-top: 5rem;
   display: flexbox;
 }
 
@@ -82,15 +82,15 @@ a {
   height: 100vh;
   padding: 15px;
   float: left;
-  width: 20%;
+  width: 15vw;
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
   color: rgb(10, 40, 83);
 }
 
 .myimage {
-  height: 15rem;
-  width: 15rem;
+  height: 15vh;
+  width: 10vw;
   border-radius: 50%;
 }
 
@@ -162,6 +162,7 @@ a {
 
 .card first-child {
   width: 50vw;
+  height: 50vh;
 }
 
 /* Tablet viewport, the max-width 768px */
@@ -175,7 +176,7 @@ a {
     flex-direction: column;
   }
   .projects-container {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 
