--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -66,25 +66,25 @@ a {
 .content {
   height: 100vh;
   padding-top: 5rem;
-  display: flexbox;
+  display: flex;
+  flex-direction: column;
 }
 
 .aboutme {
   margin-bottom: 1rem;
   height: 20rem;
-  padding: 1rem;
+  /* padding: 2rem; */
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #c7912c;
   display: flex;
 }
 
-.aside {
-  height: 100vh;
-  padding: 15px;
-  float: left;
+.side-content {
+  padding top: 20px;
+  margin-top: 13rem;
+  margin-left: 2rem;
   width: 15vw;
   font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
   color: rgb(10, 40, 83);
 }
 
@@ -96,7 +96,6 @@ a {
 
 .hiya {
   font-size: 8vw;
-
   font-family: monospace;
   padding: 1rem;
 }
@@ -113,19 +112,18 @@ a {
   font-size: 1.25vw;
   margin-right: 1rem;
   margin-left: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-family: monospace;
   padding: 2rem;
 }
 
 .contactme {
   font-size: 1.5vw;
-  margin-top: 8rem;
   margin-bottom: 2rem;
-  margin-left: 15rem;
-  padding: 3rem;
+  margin-left: 50rem;
   font-family: monospace;
   color: #c7912c;
+  justify: center;
 }
 
 .projects-container {
@@ -136,6 +134,7 @@ a {
 .projects-title {
   padding: 1rem;
   text-align: center;
+  margin-left: 25rem;
   font-size: 6vw;
   color: rgb(30, 94, 15);
   font-family: monospace;
@@ -161,8 +160,8 @@ a {
 }
 
 .card:first-child {
-  width: 25vw;
-  height: 25vh;
+  width: 30vw;
+  height: 30vh;
 }
 
 /* Tablet viewport, the max-width 768px */
@@ -186,9 +185,17 @@ a {
   .navcontainer {
     flex-direction: column;
   }
+  .aboutme {
+    flex-direction: column;
+  }
   .content {
     flex-direction: column;
   }
+
+  .contactme {
+    flex-direction: column;
+  }
+
   .projects-container {
     flex-direction: column;
   }
