--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -71,27 +71,18 @@ a {
 }
 
 .aboutme {
-  margin-bottom: 1rem;
+  margin: 5rem;
   height: 20rem;
-  /* padding: 2rem; */
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #c7912c;
   display: flex;
 }
 
-.side-content {
-  padding top: 20px;
-  margin-top: 13rem;
-  margin-left: 2rem;
-  width: 15vw;
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(10, 40, 83);
-}
-
 .myimage {
-  height: 15vh;
-  width: 10vw;
+  height: 25vh;
+  width: 15vw;
   border-radius: 50%;
+  margin-left: 20rem;
 }
 
 .hiya {
@@ -105,25 +96,24 @@ a {
   margin-right: 6rem;
   margin-left: 6rem;
   font-family: monospace;
-  margin-bottom: 2rem;
 }
 
 .paboutme {
   font-size: 1.25vw;
-  margin-right: 1rem;
-  margin-left: 1rem;
-  margin-bottom: 1rem;
+
   font-family: monospace;
-  padding: 2rem;
+  padding: 5rem;
 }
 
 .contactme {
-  font-size: 1.5vw;
-  margin-bottom: 2rem;
-  margin-left: 50rem;
-  font-family: monospace;
+  padding-top: 7rem;
+  padding-bottom: 4rem;
+  text-align: left;
+  margin-left: 15rem;
+  font-size: 2vw;
   color: #c7912c;
-  justify: center;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 .projects-container {
@@ -132,7 +122,6 @@ a {
   justify-content: space-evenly;
 }
 .projects-title {
-  padding: 1rem;
   text-align: center;
   margin-left: 25rem;
   font-size: 6vw;
@@ -172,7 +161,7 @@ a {
   }
 
   .content {
-    flex-direction: column;
+    flex-direction: row;
   }
   .projects-container {
     flex-direction: row;
@@ -194,6 +183,9 @@ a {
 
   .contactme {
     flex-direction: column;
+  }
+
+  .projects-title {
   }
 
   .projects-container {
