--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -79,10 +79,10 @@ a {
 }
 
 .myimage {
-  height: 25vh;
+  height: 100%;
   width: 15vw;
   border-radius: 50%;
-  margin-left: 20rem;
+  margin-left: 5rem;
 }
 
 .hiya {
@@ -140,6 +140,7 @@ a {
   height: 100%;
   object-fit: contain;
 }
+
 .card-info-container {
   padding: 20px;
   text-align: justify;
