finalised readme before submission

--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -115,6 +115,7 @@ a {
   font-family: monospace;
   font-weight: bold;
 }
+/*This sections refers to the My Projects sectiom*/
 
 .projects-container {
   display: flex;
